--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "starwarsapi",
+  "name": "star-wars-char-srch",
   "version": "1.0.0",
   "description": "A simple React app that works with the Star Wars API (swapi.co) to show info on a character selected from a list.",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "serve": "webpack-dev-server --hot --inline --content-base ./src --open"
+    "start": "webpack-dev-server --open",
+    "dev": "webpack-dev-server",
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^5.1.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "file-loader": "^1.1.6",
+    "clean-webpack-plugin": "^1.0.1",
+    "file-loader": "^1.1.11",
     "react-hot-loader": "^3.1.3",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
